Polishing.
StreamInfo subtypes now implement Streamable. Switch from stream mapping to for/each style to avoid Java Stream creation.

Introduce getRequired(…) methods to improve nullability experience.

Original Pull Request: #2276